--- a/screen.css
+++ b/screen.css
@@ -186,3 +186,21 @@ img, audio, video {
 }
 
 /* ===== BASE STYLES ===== */
+
+h1 {
+  font-size: 3em;
+}
+
+img {
+  max-width:100%;
+  max-height:100%;
+}
+
+#home-content {
+  padding: 1em;
+}
+
+#lead-img-container {
+  height: 10em;
+  overflow: hidden;
+}
