--- a/css/screen.css
+++ b/css/screen.css
@@ -189,6 +189,7 @@ img, audio, video {
 
 html {
   max-width: 100%;
+  background-color: #C8112A;
   font-family: 'Lato', Helvetica, Arial, sans-serif;
 }
 
@@ -196,13 +197,33 @@ h1 {
   font-size: 3em;
 }
 
+html {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+img {
+  overflow: hidden;
+}
+
 #home-content {
-  padding: 1em;
+  margin: 0 1.1em;
+  background-color: white;
+  -webkit-box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.45);
+  -moz-box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.45);
+  box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.45);
+  border-radius: 0.4em;
 }
 
 #lead-img-container {
-  position: relative;
   height: 12em;
   max-width: 100%;
   overflow: hidden;
+  border-radius: 0.4em 0.4em 0 0;
+}
+
+#form-section {
+  padding: 1em;
 }
