--- a/css/screen.css
+++ b/css/screen.css
@@ -227,3 +227,27 @@ img {
 #form-section {
   padding: 1em;
 }
+
+input[type="submit"],
+input[type="button"] {
+  border: none;
+  outline: none;
+  background-color: #C8112A;
+  height: 3.3em;
+  width: 3.3em;
+  border-radius: 50%;
+  color: white;
+  -webkit-box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.45);
+  -moz-box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.45);
+  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.45);
+}
+
+input[type="submit"]:hover,
+input[type="button"]:hover {
+  opacity: 0.7;
+  -webkit-box-shadow: 0px 2px 6px 0px rgba(0,0,0,0.45);
+  -moz-box-shadow: 0px 2px 6px 0px rgba(0,0,0,0.45);
+  box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.5);
+  transition: box-shadow 0.3s ease-in-out;
+  transition: opacity 0.3s ease-in-out;
+}
