--- a/css/screen.css
+++ b/css/screen.css
@@ -244,12 +244,20 @@ input[type="button"] {
 
 input[type="submit"]:hover,
 input[type="button"]:hover {
-  opacity: 0.7;
+  opacity: 0.8;
   -webkit-box-shadow: 0px 2px 6px 0px rgba(0,0,0,0.45);
   -moz-box-shadow: 0px 2px 6px 0px rgba(0,0,0,0.45);
   box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.5);
   transition: box-shadow 0.3s ease-in-out;
   transition: opacity 0.3s ease-in-out;
+}
+
+input[type="submit"]:active,
+input[type="button"]:active {
+  opacity: 1;
+  -webkit-box-shadow: 0px 1px 1px 0px rgba(0,0,0,0.45);
+  -moz-box-shadow: 0px 1px 1px 0px rgba(0,0,0,0.45);
+  box-shadow: 0px 1px 1px 0px rgba(0,0,0,0.5);
 }
 
 input[type="text"],
@@ -271,4 +279,9 @@ input[type="number"]
 
 .form-item {
   padding: 0.4em 0;
+}
+
+#submit-btn {
+  display: flex;
+  justify-content: flex-end;
 }
