--- a/css/screen.css
+++ b/css/screen.css
@@ -205,6 +205,7 @@ html {
 }
 
 img {
+  min-height: 100%;
   overflow: hidden;
 }
 
@@ -284,4 +285,39 @@ input[type="number"]
 #submit-btn {
   display: flex;
   justify-content: flex-end;
+}
+
+/* ===== STATE STYLES ======= */
+
+/* Desktop & Laptop */
+@media screen and (min-width: 1224px) {
+
+  img {
+    object-fit: cover;
+  }
+
+  #home-content {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 0 9%;
+  }
+
+  #lead-img-container {
+    min-width: 70%;
+    max-width: 70%;
+    min-height: 40em;
+    overflow: hidden;
+    border-radius: 0.4em 0 0em 0.4em;
+  }
+
+  #form-section {
+    display: flex;
+    min-width: calc(30% - 4em);
+    max-width: calc(30% - 4em);
+    flex-direction: column;
+    justify-content: center;
+    padding: 2em;
+  }
+
 }
