--- a/css/screen.css
+++ b/css/screen.css
@@ -270,12 +270,24 @@ input[type="number"]
   width: calc(100% - 1em);
   outline: none;
   border: none;
-  background-color: #DFDFDF;
-  color: #FFF;
+  background-color: #FFF;
   height: 1.2em;
   line-height: 1.2em;
   padding: 0.5em;
-  font-family: Georgia, serif;
+  border-radius: 0.1em;
+  -webkit-box-shadow: 0px 1px 2px 0px rgba(140,140,140,0.5);
+  -moz-box-shadow: 0px 1px 2px 0px rgba(140,140,140,0.5);
+  box-shadow: 0px 1px 2px 0px rgba(140,140,140,0.5);
+}
+
+input[type="text"]:focus,
+input[type="email"]:focus,
+input[type="tel"]:focus,
+input[type="number"]:focus
+{
+  -webkit-box-shadow: 0px 1px 2px 0px rgba(140,0,0,0.5);
+  -moz-box-shadow: 0px 1px 2px 0px rgba(140,0,0,0.5);
+  box-shadow: 0px 1px 2px 0px rgba(140,0,0,0.5);
 }
 
 .form-item {
