--- a/css/screen.css
+++ b/css/screen.css
@@ -188,20 +188,19 @@ img, audio, video {
 /* ===== BASE STYLES ===== */
 
 html {
-  max-width: 100%;
-  background-color: #C8112A;
-  font-family: 'Lato', Helvetica, Arial, sans-serif;
-}
-
-h1 {
-  font-size: 3em;
-}
-
-html {
-  min-height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  max-width: 100%;
+  min-height: 100%;
+  background-color: #C8112A;
+  font-family: 'Montserrat', Helvetica, Arial, sans-serif;
+  font-size: 0.85em;
+}
+
+h1 {
+  font-size: 2em;
+  font-weight: bold;
 }
 
 img {
@@ -219,7 +218,7 @@ img {
 }
 
 #lead-img-container {
-  height: 12em;
+  height: 13em;
   max-width: 100%;
   overflow: hidden;
   border-radius: 0.4em 0.4em 0 0;
@@ -324,7 +323,7 @@ input[type="number"]:focus
   #lead-img-container {
     min-width: 50%;
     max-width: 50%;
-    min-height: 40em;
+    min-height: 50em;
     overflow: hidden;
     border-radius: 0.4em 0 0em 0.4em;
   }
@@ -357,9 +356,6 @@ input[type="number"]:focus
   #lead-img-container {
     min-width: 70%;
     max-width: 70%;
-    min-height: 40em;
-    overflow: hidden;
-    border-radius: 0.4em 0 0em 0.4em;
   }
 
   #form-section {
