--- a/css/screen.css
+++ b/css/screen.css
@@ -187,6 +187,11 @@ img, audio, video {
 
 /* ===== BASE STYLES ===== */
 
+/*
+  Using 15px/1.618 modular scale
+  http://www.modularscale.com/?15&px&1.618
+*/
+
 html {
   display: flex;
   flex-direction: column;
@@ -196,12 +201,11 @@ html {
   line-height: 1.1em;
   background-color: #C8112A;
   font-family: 'Montserrat', Helvetica, Arial, sans-serif;
-  font-size: 0.85em;
+  font-size: 0.938em;
 }
 
 h1 {
-  font-size: 2em;
-  line-height: 1.2em;
+  font-size: 2.454em;
   font-weight: bold;
 }
 
@@ -227,11 +231,11 @@ img {
 }
 
 #form-section {
-  padding: 1em;
+  padding: 1.1em;
 }
 
 #signup-form {
-  padding-top: 1em;
+  padding-top: 1.1em;
 }
 
 input[type="submit"],
@@ -239,8 +243,8 @@ input[type="button"] {
   border: none;
   outline: none;
   background-color: #C8112A;
-  height: 4em;
-  width: 4em;
+  height: 4.4em;
+  width: 4.4em;
   border-radius: 50%;
   color: white;
   -webkit-box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.45);
@@ -310,7 +314,7 @@ input[type="number"]:focus
 @media screen and (min-width: 480px) {
 
   #lead-img-container {
-    height: 18em;
+    height: 18.7em;
   }
 
 }
@@ -342,7 +346,7 @@ input[type="number"]:focus
     max-width: calc(50% - 4em);
     flex-direction: column;
     justify-content: center;
-    padding: 2em;
+    padding: 2.2em;
   }
 
 }
@@ -367,12 +371,8 @@ input[type="number"]:focus
   }
 
   #form-section {
-    display: flex;
     min-width: calc(30% - 4em);
     max-width: calc(30% - 4em);
-    flex-direction: column;
-    justify-content: center;
-    padding: 2em;
   }
 
 }
